--- a/ControlDePPySS/App.config
+++ b/ControlDePPySS/App.config
@@ -2,13 +2,11 @@
 <configuration>
     <configSections>
     </configSections>
-  <!--
-  <connectionStrings>
+    <connectionStrings>
         <add name="ControlDePPySS.Properties.Settings.PPSSConnectionString"
-            connectionString="Data Source=DESKTOP-0ROCSOC\SQLEXPRESS;Initial Catalog=PPSS;User ID=sa;Password=Mexico.2016"
+            connectionString="Data Source=XPS-L502X\SQLEXPRESS;Initial Catalog=PPSS;User ID=sa;Password=Mexico.2016"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
-  -->
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
