--- a/ControlDePPySS/ControlDePPySS.csproj
+++ b/ControlDePPySS/ControlDePPySS.csproj
@@ -42,13 +42,13 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -155,6 +155,12 @@
     <Compile Include="FrmOrganizaciones.Designer.cs">
       <DependentUpon>FrmOrganizaciones.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPrincipal_V2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPrincipal_V2.Designer.cs">
+      <DependentUpon>FrmPrincipal_V2.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -240,6 +246,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmOrganizaciones.resx">
       <DependentUpon>FrmOrganizaciones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPrincipal_V2.resx">
+      <DependentUpon>FrmPrincipal_V2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPrincipal.resx">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
